--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Text to MP3</title>
+    <title>SAMAI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
+        <h1>Ask me a question</h1>
         <textarea id="inputText" placeholder="Type your text here..."></textarea>
         <button id="submitButton">Submit</button>
+        <div id="loadingSpinner"></div>
+
     </div>
     <script src="script.js"></script>
 </body>
