--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <textarea id="inputText" placeholder="Type your text here..."></textarea>
         <button id="submitButton">Submit</button>
         <div id="loadingSpinner"></div>
+        <div id="audioContainer"></div>
 
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
