--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="chat-container">
+        <div class="header">
+            <img class="profile-picture" src="https://i.imgur.com/iuNaJYD.jpg" alt="Profile picture">
+            <span class="contact-name">Sam</span>
+        </div>
         <div id="chatbox" class="chatbox">
             <!-- Chat messages will be appended here -->
         </div>
