--- a/elo/index.html
+++ b/elo/index.html
@@ -16,10 +16,15 @@
             <table id="leaderboard-table"></table>
         </div>
         <div id="match-section" class="hidden">
+            <label for="winner-dropdown">Winner:</label>
             <select id="winner-dropdown"></select>
+            <br>
+            <label for="loser-dropdown">Loser:</label>
             <select id="loser-dropdown"></select>
+            <br>
             <button id="submit-match" disabled>Submit</button>
         </div>
+        
     </div>
     <script src="script.js"></script>
 </body>
